aoc/day03/objects/AoC03__e/AoC03__e.object-meta.xml
<CustomObject>
    <description>Event that extends or finishs a wire</description>
    <label>AoC03 Wire</label>
    <pluralLabel>AoC03 Wire</pluralLabel>
</CustomObject>