aoc/day03/objects/AoC03__e/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is the last extension</description>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>