aoc/day03/objects/AoC03__e/fields/Extensions__c.field-meta.xml
<CustomField>
    <fullName>Extensions__c</fullName>
    <label>Extensions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>