aoc/day03/objects/AoC03__e/fields/Wire__c.field-meta.xml
<CustomField>
    <fullName>Wire__c</fullName>
    <description>Which wire to extend</description>
    <label>Wire</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>