aoc/day03/objects/AoC03__e/fields/x__c.field-meta.xml
<CustomField>
    <fullName>x__c</fullName>
    <defaultValue>0</defaultValue>
    <label>x</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>