aoc/day03/objects/AoC03__e/fields/y__c.field-meta.xml
<CustomField>
    <fullName>y__c</fullName>
    <defaultValue>0</defaultValue>
    <label>y</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>